--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 renesas/tools/project/CS_CCRL/BLE_Embedded/rBLE_Emb/DefaultBuild
 renesas/tools/project/CS_CCRL/BLE_Embedded/BLE_Embedded.h-kuzuhara.mtud
 renesas/tools/project/CS_CCRL/BLE_Embedded/rBLE_Emb/rBLE_Emb.h-kuzuhara.mtud
+renesas/tools/project/CS_CCRL/BLE_Embedded/BLE_Embedded.rcpe
